style.css
/* ... */
@keyframes filter-scan {
  from { --p: 0%; }
  to   { --p: 100%; }
}

.filheader {
    margin: 0.9375rem 0px 0.9375rem 0px;
	padding-right: 0.75rem;
	opacity: 0;
    transform: translateX(0px);
	transition: font-size 0.6s cubic-bezier(0.4, 0, 0.2, 1), transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) !important;
}

.filheader.hide {
    transform: translateX(1.5625rem);
	margin: 0.9375rem 0px 0.9375rem -0.25em;
}

.btn-hide {
    height: 1.8em;
    width: 3.5em;
    border-radius: 0.5rem;
    background: #066b60;
    color: white;
    font-size: 14px;
    border-width: 0px;
}

.filter-hide {
	opacity: 0;
    transform: translateX(0.25em);
	transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1), height 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.6s cubic-bezier(0.4, 0, 0.2, 1), transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) !important;
}

.filter-hide.hide {
    transform: translateX(-1.5625rem);
	margin-right: -1em;
}

.option-hide {
	transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1), height 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.6s cubic-bezier(0.4, 0, 0.2, 1), transform 0.6s cubic-bezier(0.4, 0, 0.2, 1) !important;
}

.btn-hide:active {
    color: #befcff;
    background: #0a9f8f;
    border: solid;
    border-width: 2px;
    border-color: #14c3b0;
}

.btn-reset {
    height: 1.8em;
    width: 3.5em;
    border-radius: 0.5rem;
    background: #612828;
    color: white;
    font-size: 14px;
    border-width: 0px;
	opacity: 0;
    transform: scaleX(1);
}

.btn-reset.hide {
    transform: scaleX(0);
}

.btn-reset:active {
    color: #ffbebe;
    background: #8b2323;
    border: solid;
    border-width: 2px;
    border-color: #b51717;
}



.filter-sections {
    overflow-y: scroll;
    height: calc(100vh - 4rem - 2.9rem - 3.25rem);
    width: 18.25rem;
    position: relative;
    z-index: 0;
}

.filter-sections::-webkit-scrollbar {
    display: none;
}

.filter-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: -1rem;
    padding-top: 1rem;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
}





.footer-container {
    height: 2.9em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.footer-text {
    margin-left: 1.25rem;
}

.header-container {
    height: 4em;
    width: 100vw;
    position: absolute;
    z-index: 1;
}

.header-pos-container {
    display: flex;
    width: 100vw;
    position: relative;
    height: 4em;
    justify-content: space-between;
}

.header-hopt-container {
    background: #0B0B0B;
    border-bottom-right-radius: 1rem;
    height: 4em;
    font-family: 'Nordic';
    /*width: 22em;*/
	width: 18.4em;
    position: relative;
    z-index: 1;
	user-select: none;
}
.auth-hfilter-container {
    background: #0B0B0B;
    border-bottom-left-radius: 16px;
    height: 4em;
    width: 18.2em;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    position: relative;
    z-index: 1;
	transition: width 0.6s cubic-bezier(0.4, 0, 0.2, 1);
}

.auth-hfilter-container.open {
	width: 21em;
}

.header {
    background: var(--gradient-northern-lights);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    color: transparent;
}

.auth {
    display: flex;
    position: relative;
    margin-left: 16px;
    margin-right: 16px;
    width: inherit;
    height: inherit;
    align-items: center;
}

.auth-img {
    position: absolute;
    right: 0rem;
    width: 2.75rem;
    height: 2.75rem;
    z-index: 3;
    border-style: solid;
    border-color: #0a9f8f;
    background: #066b60;
    border-width: 0.125rem;
    border-radius: 3.5rem;
    transform-origin: center;
    transform: scale(0.9);
    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), border 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.6s cubic-bezier(0.4, 0, 0.2, 1), background 0.6s cubic-bezier(0.4, 0, 0.2, 1);
}

.auth-img:active {
    width: 2.75rem;
    height: 2.75rem;
    border-color: #14cdb9;
    background: #0caf9e;
    transform: scale(0.85);
}

.username.authorized {
    display: block;
    background: #066b60;
    padding: 4px;
    border-radius: 6px;
    border: solid;
    border-width: 2px;
    border-color: #0a9f8f;
    position: absolute;
    left: 1rem;
}

.username {
    display: none;
}

.leaflet-control-attribution.leaflet-control {
    display: none;
}

.region-list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    line-height: 32px;
    margin-bottom: 3rem;
}

.icons-grid {
    width: 15em;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.iconcheckbox {
    display: none;
}

.iconsheader {
    margin-block-end: 0.5em;
    margin-block-start: 0.5em;
}

.icon-item {
    margin-top: 8px;
    margin-left: 4px;
    margin-right: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.important-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.guardians-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.natural-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.structures-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.collectible-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.other-icons {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 5px;
    justify-content: center;
}

.paramheader {
    background: #00100fd4;
    padding-top: 0.5em;
    padding-right: 3em;
    padding-bottom: 0.5em;
    padding-left: 3em;
    margin-top: 0.83em;
    margin-bottom: 0.83em;
    border-radius: 16px;
    border: solid;
    border-color: #12ffe54f;
}
/* ... */

